--- a/nav.css
+++ b/nav.css
@@ -24,11 +24,12 @@
 nav .nav-menu{
     display: flex;
     justify-content: space-between;
-
+align-items: center;
 
     width:40%;
 }
     nav a{ 
+      width: fit-content;
     padding-top:1.9em;
     color:var(--white);
     position: relative;
@@ -72,6 +73,8 @@ nav .phone span ,.phone1 span{
     right: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content:center;
     padding: 1rem;
     background-color: var(--bleu);
     width: 100%;
