--- a/nav.css
+++ b/nav.css
@@ -88,7 +88,7 @@ nav .phone span ,.phone1 span{
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color:white;
+    background-color:var(--white);
     transition: all .5s ease;
     z-index: -1;
     
