--- a/footer.css
+++ b/footer.css
@@ -1,49 +1,64 @@
-
-footer{
-    padding: 2em 0;
-    display:flex;
-    flex-direction: row;
-    color:var(--white);
-    justify-content: space-around;
-    background-color:var(--bleu);
+@import url('https://fonts.cdnfonts.com/css/lucida-handwriting-std');
+footer {
+    width: 100%;
+  color: var(--white);
+  background-color: var(--bleu);
+  text-align: center;
 }
-footer .contact{
-    font-size: 2rem;
+footer .contact {
     margin-bottom: 2rem;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-    
+  font-size: 2rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+footer ul img {
+  width: 15em;
+}
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+footer ul li .description {
+  padding-top: 2rem;
+  font-family: "Lucida Handwriting Std", sans-serif;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
-footer  svg{
+.droits {
+  color: var(--white);
+  background-color: var(--bleu);
+  font-size: smaller;
+  text-align: center;
+  padding: 1rem;
+}
+
+@media screen and (min-width: 1200px) {
+  footer {
+    padding: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+  footer svg {
     margin-right: 1em;
-}
-footer ul img{
-    width:15em;
-    
-}
-footer ul{
-margin:1em;
-
-    list-style: none;
-}
-footer ul li .description{
-    padding-top:2rem;
-    font-family: 'Lucida Handwriting Std', sans-serif;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-    font-weight: 600;                                         
-
-}
-
-footer ul li .phone,footer ul li .mail,footer ul li .adresse{
+  }
+  footer ul li .phonef,
+  footer ul li .mail,
+  footer ul li .adresse {
     text-align: left;
     margin-left: 5em;
+  }
 }
 
-
-.droits{
-    color:var(--white);
-    background-color:var(--bleu);
-    font-size: smaller;
-    
+@media screen and (max-width: 1200px) {
+  footer {
+    padding-top: 2rem;
+    display: flex;gap: 40px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
