--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
+max-width: 100%;
   width: 100%;
 }
 .mainsec p {
