--- a/footer.css
+++ b/footer.css
@@ -32,6 +32,11 @@ footer ul li .description {
   font-size: smaller;
   text-align: center;
   padding: 1rem;
+  height: .75rem;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -57,8 +62,17 @@ footer ul li .description {
   footer {
     padding-top: 2rem;
     display: flex;gap: 40px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
   }
+  footer .contact{
+    font-size: 1.2rem;
+    margin-bottom: .75rem;
+    
+  }
+  footer .adresse{
+    margin-bottom: 0.75rem;
+  }
+  
 }
