--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ padding: 0;
 img {
   width: 100%;
   height: 100%;
-  aspect-ratio: 1 / 1;
-object-fit: contain;
+  /* aspect-ratio: 1 / 1;*/
+object-fit: contain; 
 }
 a {
   text-decoration: none;
