--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ img {
   width: 100%;
   height: 100%;
   /* aspect-ratio: 1 / 1;*/
-object-fit: contain; 
+/* object-fit: contain;  */
 }
 a {
   text-decoration: none;
