--- a/footer.css
+++ b/footer.css
@@ -10,6 +10,7 @@ footer .contact {
   font-size: 2rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-shadow: 2px 2px 4px var(--blackShadow);
 }
 footer ul img {
   width: 15em;
@@ -24,6 +25,7 @@ footer ul li .description {
   letter-spacing: 0.1em;
   text-transform: uppercase;
   font-weight: 600;
+  text-shadow: 2px 2px 4px var(--blackShadow);
 }
 
 .droits {
@@ -61,10 +63,21 @@ footer ul li .description {
 @media screen and (max-width: 1200px) {
   footer {
     padding-top: 2rem;
-    display: flex;gap: 40px;
+    display: flex;
+    gap: 40px;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
+  }
+  footer ul img {
+    width: 12em;
+    
+  }
+  footer ul li .description {
+    font-size: 0.75rem;
+   padding-left: 1.5rem;
+   padding-right:1.5rem;
+   text-shadow: 2px 2px 4px var(--blackShadow);
   }
   footer .contact{
     font-size: 1.2rem;
